Adding thor scripts for uploading apps to a device running the droiuby client